--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "eris": "^0.8.6"
   },
   "devDependencies": {
+    "@types/node": "^10.5.2",
     "eslint": "^5.1.0",
     "ts-node": "^7.0.0",
     "tslint": "^5.10.0",
