Remove version from Erisa as it caused problems

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,8 +14,7 @@
     },
     "include": [
         "src/",
-        "index.ts",
-        "package.json"
+        "index.ts"
     ],
     "exclude": [
         "node_modules",
