--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "test": "mocha -r ts-node/register tests/**/*.test.ts"
   },
   "dependencies": {
-    "eris": "^0.8.6"
+    "eris": "^0.8.6",
+    "minimatch": "^3.0.4"
   },
   "devDependencies": {
     "@types/chai": "^4.1.4",
