--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "tslint -p . -c tslint.json",
     "build": "tsc -p .",
     "prepublishOnly": "npm run build",
-    "test": "mocha -r ts-node/register tests/**/*.test.ts"
+    "test": "mocha",
+    "coverage": "nyc mocha"
   },
   "dependencies": {
     "eris": "^0.8.6",
@@ -18,11 +19,13 @@
   },
   "devDependencies": {
     "@types/chai": "^4.1.4",
+    "@types/minimatch": "^3.0.3",
     "@types/mocha": "^5.2.4",
     "@types/node": "^10.5.2",
     "chai": "^4.1.2",
     "mocha": "^5.2.0",
     "nyc": "^12.0.2",
+    "source-map-support": "^0.5.6",
     "ts-node": "^7.0.0",
     "tslint": "^5.10.0",
     "typescript": "^2.9.2"
@@ -31,5 +34,25 @@
     "src/",
     "dist/",
     "index.ts"
-  ]
+  ],
+  "nyc": {
+    "include": [
+      "src/**/*.ts"
+    ],
+    "exclude": [
+      "test/**/*.test.ts"
+    ],
+    "extension": [
+      ".ts"
+    ],
+    "require": [
+      "ts-node/register"
+    ],
+    "reporter": [
+      "text-summary",
+      "html"
+    ],
+    "sourceMap": true,
+    "instrument": true
+  }
 }
