--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,14 +3,12 @@
         "target": "es6",
         "lib": ["esnext"],
         "module": "commonjs",
+        "moduleResolution": "node",
+        "outDir": "dist/",
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
-        "outDir": "dist/",
-        "preserveConstEnums": true,
-        "suppressImplicitAnyIndexErrors": true,
         "strictNullChecks": true,
-        "resolveJsonModule": true,
-        "esModuleInterop": true
+        "esModuleInterop": true,
     },
     "include": [
         "src/",
