--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,6 @@ before_script:
   - ./cc-test-reporter before-build
 script:
   - npm run lint
-  - npm coverage
+  - npm run coverage
 after_script:
   - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
