--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
         "lib": ["esnext"],
         "module": "commonjs",
         "moduleResolution": "node",
+        "allowSyntheticDefaultImports": true,
         "outDir": "dist/",
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
