Add tests for other functions, and also restructure to stop repetition

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
         "target": "es6",
-        "lib": ["esnext"],
+        "lib": ["es2017"],
         "module": "commonjs",
         "moduleResolution": "node",
         "allowSyntheticDefaultImports": true,
