--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
         "experimentalDecorators": true,
         "strictNullChecks": true,
         "esModuleInterop": true,
+        "declaration": true
     },
     "include": [
         "src/",
