--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "license": "MIT",
   "scripts": {
     "lint": "tslint -p . -c tslint.json",
-    "build": "tsc -p .",
+    "compile": "tsc -p .",
+    "clean": "rimraf dist",
+    "build": "npm run clean && npm run compile",
     "prepublishOnly": "npm run build",
     "test": "mocha",
     "coverage": "nyc mocha"
@@ -25,6 +27,7 @@
     "chai": "^4.1.2",
     "mocha": "^5.2.0",
     "nyc": "^12.0.2",
+    "rimraf": "^2.6.2",
     "source-map-support": "^0.5.6",
     "ts-node": "^7.0.0",
     "tslint": "^5.10.0",
