--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,22 @@
 {
     "compilerOptions": {
         "target": "es6",
-        "lib": ["es2017"],
+        "lib": ["esnext"],
         "module": "commonjs",
         "moduleResolution": "node",
         "allowSyntheticDefaultImports": true,
         "outDir": "dist/",
-        "emitDecoratorMetadata": true,
-        "experimentalDecorators": true,
         "strictNullChecks": true,
         "esModuleInterop": true,
         "declaration": true
     },
     "include": [
-        "src/",
+        "src",
         "index.ts"
     ],
     "exclude": [
         "node_modules",
-        "dist"
+        "dist",
+        "defaults"
     ]
 }
