--- a/package.json
+++ b/package.json
@@ -1,46 +1,31 @@
 {
-  "name": "erisa",
-  "version": "0.0.2",
+  "name": "erisa-monorepo",
+  "version": "4.2.0",
   "description": "A modular, unopinionated, middleware-based Discord bot framework.",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "repository": "https://github.com/Ovyerus/erisa",
   "author": "Ovyerus <iamovyerus@gmail.com>",
   "license": "MIT",
+  "private": true,
   "scripts": {
-    "lint": "tslint -p . -c tslint.json",
-    "compile": "tsc -p .",
-    "clean": "rimraf dist",
-    "build": "npm run clean && npm run compile",
-    "prepublishOnly": "npm run build",
     "test": "mocha",
-    "coverage": "nyc mocha"
-  },
-  "dependencies": {
-    "eris": "^0.8.6",
-    "minimatch": "^3.0.4"
+    "coverage": "nyc mocha",
+    "lint": "lerna run lint"
   },
   "devDependencies": {
     "@types/chai": "^4.1.4",
-    "@types/minimatch": "^3.0.3",
     "@types/mocha": "^5.2.4",
-    "@types/node": "^10.5.2",
     "chai": "^4.1.2",
+    "lerna": "^3.0.0-rc.0",
     "mocha": "^5.2.0",
     "nyc": "^12.0.2",
-    "rimraf": "^2.6.2",
     "source-map-support": "^0.5.6",
     "ts-node": "^7.0.0",
     "tslint": "^5.10.0",
     "typescript": "^2.9.2"
   },
-  "files": [
-    "src/",
-    "dist/",
-    "index.ts"
-  ],
   "nyc": {
     "include": [
-      "src/**/*.ts"
+      "main/**/*.ts"
     ],
     "exclude": [
       "test/**/*.test.ts"
@@ -58,5 +43,9 @@
     ],
     "sourceMap": true,
     "instrument": true
-  }
+  },
+  "workspaces": [
+    "defaults/*",
+    "main/"
+  ]
 }
