chore: fix tests not finding custom paths correctly

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,9 @@
         "allowSyntheticDefaultImports": true,
         "strictNullChecks": true,
         "esModuleInterop": true,
+        "baseUrl": ".",
+        "paths": {
+            "erisa_": ["main/"]
+        }
     }
 }
