--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "nyc": "^12.0.2",
     "source-map-support": "^0.5.6",
     "ts-node": "^7.0.0",
+    "tsconfig-paths": "^3.5.0",
     "tslint": "^5.10.0",
     "typescript": "^2.9.2"
   },
