chore: make lerna use yarn instead of npm

--- a/lerna.json
+++ b/lerna.json
@@ -3,5 +3,7 @@
     "defaults/*",
     "main/"
   ],
-  "version": "independent"
+  "version": "independent",
+  "npmClient": "yarn",
+  "useWorkspaces": true
 }
