--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
         "esModuleInterop": true,
         "baseUrl": ".",
         "paths": {
-            "erisa_": ["main/"]
+            "erisa_": ["main/"],
+            "@erisa_/*": ["defaults/*"]
         }
     }
 }
