--- a/defaults/logger/tsconfig.json
+++ b/defaults/logger/tsconfig.json
@@ -5,7 +5,7 @@
         "declaration": true
     },
     "include": [
-        "src",
+        "index.ts",
     ],
     "exclude": [
         "node_modules",
