--- a/package.json
+++ b/package.json
@@ -19,14 +19,17 @@
     "mocha": "^5.2.0",
     "nyc": "^12.0.2",
     "source-map-support": "^0.5.6",
+    "test-console": "^1.1.0",
     "ts-node": "^7.0.0",
     "tsconfig-paths": "^3.5.0",
     "tslint": "^5.10.0",
+    "turbocolor": "^2.4.3",
     "typescript": "^2.9.2"
   },
   "nyc": {
     "include": [
-      "main/**/*.ts"
+      "main/**/*.ts",
+      "defaults/**/*.ts"
     ],
     "exclude": [
       "test/**/*.test.ts"
