--- a/package.json
+++ b/package.json
@@ -15,16 +15,16 @@
     "@types/chai": "^4.1.4",
     "@types/mocha": "^5.2.4",
     "chai": "^4.1.2",
-    "lerna": "^3.0.0-rc.0",
+    "lerna": "^3.0.1",
     "mocha": "^5.2.0",
     "nyc": "^12.0.2",
-    "source-map-support": "^0.5.6",
+    "source-map-support": "^0.5.8",
     "test-console": "^1.1.0",
     "ts-node": "^7.0.0",
     "tsconfig-paths": "^3.5.0",
     "tslint": "^5.10.0",
     "turbocolor": "^2.4.3",
-    "typescript": "^2.9.2"
+    "typescript": "^3.0.1"
   },
   "nyc": {
     "include": [
