--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,7 @@
 env:
   global:
     - CC_TEST_REPORTER_ID=89cb579b6e32a16b09d14b6311ff441939c0f87435a66fd07857bbab672ab29c
-cache:
-  directories:
-    - "node_modules"
+cache: yarn
 language: node_js
 node_js:
   - "10"
