--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   },
   "devDependencies": {
     "@types/chai": "^4.1.4",
+    "@types/chai-as-promised": "^7.1.0",
     "@types/mocha": "^5.2.4",
     "chai": "^4.1.2",
+    "chai-as-promised": "^7.1.1",
     "lerna": "^3.0.1",
     "mocha": "^5.2.0",
     "nyc": "^12.0.2",
