chore: add global build script, and make subpackages direct to dist directories

--- a/defaults/logger/package.json
+++ b/defaults/logger/package.json
@@ -2,7 +2,8 @@
     "name": "@erisa/logger",
     "version": "0.0.1",
     "description": "The default logging module for Erisa.",
-    "main": "index.js",
+    "main": "dist/index.js",
+    "types": "dist/index.d.ts",
     "repository": "https://github.com/Ovyerus/erisa",
     "author": "Ovyerus <iamovyerus@gmail.com>",
     "license": "MIT",
