--- a/defaults/commands/package.json
+++ b/defaults/commands/package.json
@@ -2,7 +2,8 @@
   "name": "@erisa/commands",
   "version": "0.0.1",
   "description": "The default commands framework for Erisa.",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "repository": "https://github.com/Ovyerus/erisa",
   "author": "Ovyerus <iamovyerus@gmail.com>",
   "license": "MIT",
