--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test": "mocha",
     "coverage": "nyc mocha",
     "lint": "lerna run lint",
-    "build": "lerna run build"
+    "build": "lerna run build",
+    "clean": "lerna run clean"
   },
   "devDependencies": {
     "@types/chai": "^4.1.4",
