--- a/defaults/commands/package.json
+++ b/defaults/commands/package.json
@@ -24,5 +24,8 @@
     "rimraf": "^2.6.2",
     "tslint": "^5.11.0",
     "typescript": "^2.9.2"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
