--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
   "scripts": {
     "test": "mocha",
     "coverage": "nyc mocha",
-    "lint": "lerna run lint",
-    "build": "lerna run build",
-    "clean": "lerna run clean"
+    "lint": "wsrun lint",
+    "build": "wsrun build --stages",
+    "clean": "wsrun clean",
+    "wsrun": "wsrun"
   },
   "devDependencies": {
     "@types/chai": "^4.1.4",
@@ -19,7 +20,6 @@
     "@types/mocha": "^5.2.4",
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
-    "lerna": "^3.0.1",
     "mocha": "^5.2.0",
     "nyc": "^12.0.2",
     "source-map-support": "^0.5.8",
@@ -28,7 +28,8 @@
     "tsconfig-paths": "^3.5.0",
     "tslint": "^5.10.0",
     "turbocolor": "^2.4.3",
-    "typescript": "^3.0.1"
+    "typescript": "^3.0.1",
+    "wsrun": "^2.2.1"
   },
   "nyc": {
     "include": [
