--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "lint": "wsrun lint",
     "build": "wsrun build --stages",
     "clean": "wsrun clean",
-    "wsrun": "wsrun"
+    "wsrun": "wsrun",
+    "install:all": "wsrun install --serial"
   },
   "devDependencies": {
     "@types/chai": "^4.1.4",
@@ -21,7 +22,7 @@
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
     "mocha": "^5.2.0",
-    "nyc": "^12.0.2",
+    "nyc": "^13.0.1",
     "source-map-support": "^0.5.8",
     "test-console": "^1.1.0",
     "ts-node": "^7.0.0",
