chore: move to ESLint from TSLint
Works on #2

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,8 +1,7 @@
 {
     "recommendations": [
-        "ryanluker.vscode-coverage-gutters",
-        "editorconfig.editorconfig",
         "dbaeumer.vscode-eslint",
-        "eg2.tslint"
+        "esbenp.prettier-vscode",
+        "editorconfig.editorconfig"
     ]
 }
