--- a/package.json
+++ b/package.json
@@ -10,31 +10,40 @@
   "scripts": {
     "test": "mocha",
     "coverage": "nyc mocha",
-    "lint": "tslint -p . -c tslint.json",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
     "compile": "tsc -p .",
     "clean": "rimraf dist",
-    "build": "npm run clean && npm run compile",
-    "prepublishOnly": "npm run build"
+    "build": "yarn clean && yarn compile",
+    "prepublishOnly": "yarn build"
   },
   "dependencies": {
-    "eris": "^0.9.0",
+    "eris": "^0.10.1",
     "minimatch": "^3.0.4"
   },
   "devDependencies": {
-    "@types/chai": "^4.1.7",
-    "@types/chai-as-promised": "^7.1.0",
+    "@types/chai": "^4.2.0",
+    "@types/chai-as-promised": "^7.1.2",
     "@types/minimatch": "^3.0.3",
-    "@types/mocha": "^5.2.5",
-    "@types/node": "^10.12.10",
+    "@types/mocha": "^5.2.7",
+    "@types/node": "^12.7.2",
+    "@typescript-eslint/eslint-plugin": "2.0.0",
+    "@typescript-eslint/parser": "2.0.0",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
-    "mocha": "^5.2.0",
-    "nyc": "^13.1.0",
-    "rimraf": "^2.6.2",
-    "source-map-support": "^0.5.9",
-    "ts-node": "^7.0.1",
-    "tslint": "^5.11.0",
-    "typescript": "^3.1.6"
+    "eslint": "^6.2.2",
+    "eslint-config-clarity": "0.2.6",
+    "eslint-plugin-import": "2.18.2",
+    "eslint-plugin-prettier": "3.1.0",
+    "eslint-plugin-react": "7.14.3",
+    "eslint-plugin-react-hooks": "2.0.1",
+    "eslint-plugin-sift": "0.3.0",
+    "mocha": "^6.2.0",
+    "nyc": "^14.1.1",
+    "prettier": "1.18.2",
+    "rimraf": "^3.0.0",
+    "source-map-support": "^0.5.13",
+    "ts-node": "^8.3.0",
+    "typescript": "^3.5.3"
   },
   "files": [
     "dist/",
