chore: migrate to Jest for tests

--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -1,5 +1,10 @@
 {
   "extends": "./tsconfig.json",
-  "compilerOptions": {"allowJs": true},
-  "include": ["./**/*", "./*"]
+  "compilerOptions": {
+    "allowJs": true
+  },
+  "include": [
+    "**.ts",
+    "**.js"
+  ]
 }
