--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,18 @@
 {
-    "compilerOptions": {
-        "target": "es6",
-        "lib": ["esnext"],
-        "module": "commonjs",
-        "allowSyntheticDefaultImports": true,
-        "strictNullChecks": true,
-        "esModuleInterop": true,
-        "outDir": "dist/",
-        "declaration": true
-    },
-    "include": [
-        "src/",
-        "index.ts"
-    ]
+  "compilerOptions": {
+    "target": "es6",
+    "lib": [
+      "esnext"
+    ],
+    "module": "commonjs",
+    "allowSyntheticDefaultImports": true,
+    "strictNullChecks": true,
+    "esModuleInterop": true,
+    "outDir": "dist/",
+    "declaration": true
+  },
+  "include": [
+    "src/",
+    "index.ts"
+  ]
 }
