--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "author": "Ovyerus <iamovyerus@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "test": "mocha",
+    "test": "jest",
     "coverage": "nyc mocha",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
     "compile": "tsc -p .",
@@ -21,15 +21,12 @@
     "minimatch": "^3.0.4"
   },
   "devDependencies": {
-    "@types/chai": "^4.2.0",
-    "@types/chai-as-promised": "^7.1.2",
+    "@types/jest": "^24.0.18",
     "@types/minimatch": "^3.0.3",
     "@types/mocha": "^5.2.7",
     "@types/node": "^12.7.2",
     "@typescript-eslint/eslint-plugin": "2.0.0",
     "@typescript-eslint/parser": "2.0.0",
-    "chai": "^4.2.0",
-    "chai-as-promised": "^7.1.1",
     "eslint": "^6.2.2",
     "eslint-config-clarity": "0.2.6",
     "eslint-plugin-import": "2.18.2",
@@ -37,39 +34,15 @@
     "eslint-plugin-react": "7.14.3",
     "eslint-plugin-react-hooks": "2.0.1",
     "eslint-plugin-sift": "0.3.0",
-    "mocha": "^6.2.0",
-    "nyc": "^14.1.1",
+    "jest": "^24.9.0",
     "prettier": "1.18.2",
     "rimraf": "^3.0.0",
-    "source-map-support": "^0.5.13",
-    "ts-node": "^8.3.0",
+    "ts-jest": "^24.0.2",
     "typescript": "^3.5.3"
   },
   "files": [
     "dist/",
     "LICENSE",
     "README.md"
-  ],
-  "nyc": {
-    "include": [
-      "index.ts",
-      "src/**/*.ts"
-    ],
-    "exclude": [
-      "test/**/*.test.ts"
-    ],
-    "extension": [
-      ".ts"
-    ],
-    "require": [
-      "ts-node/register"
-    ],
-    "reporter": [
-      "text-summary",
-      "html",
-      "lcov"
-    ],
-    "sourceMap": true,
-    "instrument": true
-  }
+  ]
 }
