--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "erisa",
-  "version": "0.0.4-0",
+  "version": "0.0.5",
   "description": "A modular, unopinionated, middleware-based Discord bot framework.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
